# what

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml
ci/: modify_dev_version.py
src/: fields.py  formatter.py  matcher.py  presentation.py  what.py
src/entities/: entity.py  file.py  process.py  user.py
src/what_cli/: __init__.py  __main__.py  matcher.py  what.py
src/what_cli/entities/: __init__.py  entity.py  file.py  preview.py  process.py  user.py
src/what_cli/fields/: __init__.py  basic.py  code.py  containers.py  permissions.py  semantic.py
tests/: test_matcher.py
