[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "what-cli"
authors = [{name = "Rich Smith", email = "rls@hwyl.org"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["what", "file", "cli", "util"]
dependencies = [
  "ascii-magic >= 1.5",
  "chardet >= 5.2.0",
  "humanize >=  4.12.0",
  "pillow >= 11.2.0",
  "psutil >= 7.0.0",
  "python-magic >= 0.4",
  "rich >= 14.0.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-mock >= 3.12",
]

[project.urls]
Home = "https://github.com/richsmith/what"

[project.scripts]
what = "what_cli.__main__:main"
